import { StringValueObject } from '@haskou/value-objects';

export class PushSubscriptionKey extends StringValueObject {}
