@startuml PushNotificationsClasses
title Push notifications context

skinparam packageStyle rectangle
skinparam linetype ortho

package "push-notifications/domain" {
  class PushSubscription <<AggregateRoot>>
  class PushSubscriptionEndpoint <<ValueObject>>
  class PushSubscriptionKey <<ValueObject>>

  interface PushSubscriptionRepository
}

package "push-notifications/application" {
  class PushSubscriptionRegistrar
  class PushSubscriptionRemover
  class PushNotificationDispatcher
  class PushNotificationDelivery <<Port>>
  class PushNotificationPayload
  class PushNotificationIntent
  class PushNotificationScope
  class PushNotificationDeliveryResult
  class PushTestNotificationSender
}

package "push-notifications/infrastructure" {
  class LocalPushSubscriptionRepository
  class LocalPushSubscriptionDocument
  class PushVapidConfiguration
  class WebPushNotificationDelivery
}

PushSubscription *-- PushSubscriptionEndpoint
PushSubscription *-- PushSubscriptionKey

PushSubscriptionRegistrar ..> PushSubscriptionRepository
PushSubscriptionRemover ..> PushSubscriptionRepository
PushNotificationDispatcher ..> PushSubscriptionRepository
PushNotificationDispatcher ..> PushNotificationDelivery
PushNotificationDispatcher ..> PushNotificationPayload
PushNotificationDispatcher ..> PushNotificationIntent
PushNotificationIntent *-- PushNotificationScope
PushTestNotificationSender ..> PushNotificationDelivery
PushNotificationDelivery ..> PushNotificationDeliveryResult

LocalPushSubscriptionRepository ..|> PushSubscriptionRepository
LocalPushSubscriptionRepository ..> LocalPushSubscriptionDocument
LocalPushSubscriptionRepository ..> PushSubscription

WebPushNotificationDelivery ..|> PushNotificationDelivery
WebPushNotificationDelivery ..> PushVapidConfiguration

@enduml
